# pynodestatviz

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  pynodestatviz.spec.in
debian/: changelog.in  control  python-pynodestatviz.install  python3-pynodestatviz.install  rules
pynodestatviz/: __init__.py  nodedisplaycanvas.py  nodepropertyframe.py  nodestatviz.py
pynodestatviz/schema/: nodestatviz.xsd
scripts/: pynodestatviz
